<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="5dp">

        <com.optimalbd.dibosh.TextView.CustomTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Personal Info"
            android:textColor="#00A651"
            android:textSize="25sp"
            android:textStyle="bold"
            app:customFont="@string/font_name" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bacground"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/even_man" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/edittext_bacground"
                android:hint="@string/enter_your_name" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_bacground"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/event_date" />

            <EditText
                android:id="@+id/birthDateET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/edittext_bacground"
                android:editable="false"
                android:hint="@string/enter_birth_date" />
        </LinearLayout>


        <com.optimalbd.dibosh.TextView.CustomTextView
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mStatus"
            android:textSize="23sp"
            app:customFont="@string/font_name" />

        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/yesCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <CheckBox
                android:id="@+id/noCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@id/mDateLayout"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bacground"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/event_date" />

            <EditText
                android:id="@+id/marriedDateET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/edittext_bacground"
                android:editable="false"
                android:hint="@string/m_date" />

        </LinearLayout>

        <com.optimalbd.dibosh.TextView.CustomButton
            app:customButtonFont="@string/font_name"
            android:layout_margin="25dp"
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/button_round"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>