<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.optimalbd.dibosh.Fragments.NDayFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#363636"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="start"
            android:orientation="horizontal">


            <com.optimalbd.dibosh.TextView.CustomTextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:text="@string/view_by"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:customFont="@string/font_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/spinner_bacground">

                <Spinner
                    android:id="@+id/viewListSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:background="@null" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/down_arrow" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.35"
            android:background="@drawable/spinner_bacground"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/viewByList"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:src="@drawable/list" />

                <ImageView
                    android:id="@+id/viewByTable"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:src="@drawable/grid" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<Spinner-->
    <!--android:id="@+id/viewListSpinner"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:entries="@array/view_list" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:id="@+id/monthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/spinner_bacground"
        android:visibility="gone">

        <Spinner
            android:id="@+id/monthSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/month_list"
            android:padding="3dp" />
    </LinearLayout>

    <com.optimalbd.dibosh.TextView.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/noteTextView"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/note"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:customFont="@string/font_name" />

    <ListView
        android:id="@+id/iDaysListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="2dp"
        android:divider="@null"/>

</LinearLayout>

    <!--iDaysListView-->